Fix #80 add IOS overflow scrolling support

--- a/src/main/websrc/sass/sidebar.scss
+++ b/src/main/websrc/sass/sidebar.scss
@@ -7,6 +7,7 @@ $sidebar-bottom-menu-mobile-height: 70.6px;
 
 .ui.sidebar + .pusher {
   overflow-y: auto;
+  -webkit-overflow-scrolling: touch;
 }
 
 .ui.sidebar.mobile {
